--- a/FI.WebAtividadeEntrevista/FI.WebAtividadeEntrevista/FI.WebAtividadeEntrevista.csproj
+++ b/FI.WebAtividadeEntrevista/FI.WebAtividadeEntrevista/FI.WebAtividadeEntrevista.csproj
@@ -118,6 +118,7 @@
     </Compile>
     <Compile Include="Models\ClienteModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validation\ValidaCPF.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\BancoDeDados.mdf" />
@@ -194,7 +195,6 @@
     <Content Include="Scripts\Clientes\FI.Clientes.js" />
     <Content Include="Scripts\Clientes\FI.ListClientes.js" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
-    <Content Include="Scripts\Clientes\FI.MaskCPF.js" />
     <Content Include="Scripts\inputmask\bindings\inputmask.binding.js" />
     <Content Include="Scripts\inputmask\colormask.css" />
     <Content Include="Scripts\inputmask\colormask.js" />
@@ -325,6 +325,7 @@
     <Content Include="Scripts\jtable\themes\metro\red\jtable.css" />
     <Content Include="Scripts\jtable\themes\metro\red\jtable.min.css" />
     <Content Include="Scripts\jtable\themes\metro\red\loading.gif" />
+    <Content Include="Scripts\MaskCPF.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
